--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet />
+<div class="w-full h-full bg-cover bg-center">
+  <app-header *ngIf="showHeader()"></app-header>
+  <router-outlet />
+</div>
