--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -9,7 +9,7 @@
 
       <div class="border rounded p-5 py-7 shadow-lg relative bg-white/80">
         <!-- Title -->
-        <mat-label class="text-3xl font-bold mb-4">{{title}}</mat-label>
+        <mat-label class="text-3xl text-caramel-500 mb-4">{{title}}</mat-label>
         <ng-content></ng-content>
       </div>
     </div>
