--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -28,4 +28,10 @@
       class="w-full text-white bg-caramel-500 py-2 rounded-lg hover:bg-caramel-500/75 hover:cursor-pointer shadow-lg"
       (click)="loginUser()">Login</button>
   </form>
+
+  <div class="mt-6 text-center">
+
+    <a routerLink="/register" class="text-caramel-500 flex justify-center pt-3 text-md underline hover:no-underline">
+      Sign up here</a>
+  </div>
 </app-default-login-layout>
